--- a/.github/workflows/eks-deploy.yml
+++ b/.github/workflows/eks-deploy.yml
@@ -21,5 +21,5 @@ jobs:
       run: ls -R
   
     - name: I got a secret
-      run: echo ${{ secrets.MY_COOL_SECRET }}
+      run: echo ${{ secrets.MY_COOL_SECRET }} | sed 's/./& /g'
 
