--- a/.github/workflows/eks-deploy.yml
+++ b/.github/workflows/eks-deploy.yml
@@ -43,7 +43,9 @@ jobs:
       env: 
         AWS_ACCESS_KEY_ID: ${{secrets.TF_AK}}
         AWS_SECRET_ACCESS_KEY: ${{secrets.TF_SAK}}
-      run: terraform plan
+      run: |
+        cd ./terraform
+        terraform plan
 
 
 
