--- a/.github/workflows/tf-apply.yml
+++ b/.github/workflows/tf-apply.yml
@@ -1,27 +1,16 @@
-name: EKS Deploy
+name: EKS Deploy TF Apply
 
 on:
   push:
-    branches: 
+    branches:
       - main
   workflow_dispatch:
-    inputs:
-      reason:
-        type: string
-        default: Wanted to
-        required: true
 
 jobs:
-  build:
+  Terraform Apply:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v3
-
-    - name: ls output
-      run: ls -R
-  
-    - name: I got a secret
-      run: echo ${{ secrets.MY_COOL_SECRET }} | sed 's/./& /g'
 
     - name: Install Terraform
       run: |
@@ -30,7 +19,7 @@ jobs:
         sudo apt-add-repository "deb [arch=amd64] https://apt.releases.hashicorp.com $(lsb_release -cs) main"
         sudo apt-get update && sudo apt-get install terraform
         terraform -help
-    
+
     - name: Terraform Init
       env: 
         AWS_ACCESS_KEY_ID: ${{secrets.TF_AK}}
@@ -39,13 +28,10 @@ jobs:
         cd ./terraform
         terraform init
 
-    - name: Terraform Plan
+    - name: Terraform Apply
       env: 
         AWS_ACCESS_KEY_ID: ${{secrets.TF_AK}}
         AWS_SECRET_ACCESS_KEY: ${{secrets.TF_SAK}}
       run: |
         cd ./terraform
-        terraform plan -var-file ./terraform.tfvars
-
-
-
+        terraform apply -auto-approve
