--- a/.github/workflows/tf-plan.yml
+++ b/.github/workflows/tf-plan.yml
@@ -7,7 +7,7 @@ on:
   workflow_dispatch:
 
 jobs:
-  Terraform Plan:
+  Terraform_Plan:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v3
