Testing how setup terraform works

--- a/.github/workflows/tf-apply-setup.yml
+++ b/.github/workflows/tf-apply-setup.yml
@@ -10,14 +10,17 @@ jobs:
     - uses: actions/checkout@v3
     - uses: hashicorp/setup-terraform@v2
 
-    - name: Terraform Init
-      env:
-        AWS_ACCESS_KEY_ID: ${{secrets.TF_AK}}
-        AWS_SECRET_ACCESS_KEY: ${{secrets.TF_SAK}}
-      run: terraform init
+    - run: terraform -help
+    - run: ls -R
 
-    - name: Terraform Plan
-      env:
-        AWS_ACCESS_KEY_ID: ${{secrets.TF_AK}}
-        AWS_SECRET_ACCESS_KEY: ${{secrets.TF_SAK}}
-      run: terraform plan
+    # - name: Terraform Init
+    #   env:
+    #     AWS_ACCESS_KEY_ID: ${{secrets.TF_AK}}
+    #     AWS_SECRET_ACCESS_KEY: ${{secrets.TF_SAK}}
+    #   run: terraform init
+
+    # - name: Terraform Plan
+    #   env:
+    #     AWS_ACCESS_KEY_ID: ${{secrets.TF_AK}}
+    #     AWS_SECRET_ACCESS_KEY: ${{secrets.TF_SAK}}
+    #   run: terraform plan
