--- a/.github/workflows/tf-apply-setup.yml
+++ b/.github/workflows/tf-apply-setup.yml
@@ -6,6 +6,10 @@ on:
 jobs:
   Terraform_Plan:
     runs-on: ubuntu-latest
+    defaults:
+      run: 
+        shell: bash
+        working-directory: terraform
     steps:
     - uses: actions/checkout@v3
     - uses: hashicorp/setup-terraform@v2
