--- a/.github/workflows/tf-plan.yml
+++ b/.github/workflows/tf-plan.yml
@@ -40,7 +40,7 @@ jobs:
         AWS_SECRET_ACCESS_KEY: ${{secrets.TF_SAK}}
       run: |
         cd ./terraform
-        terraform plan -var-file ./terraform.tfvars
+        terraform plan
 
 
 
