--- a/.github/workflows/tf-plan-setup-container.yml
+++ b/.github/workflows/tf-plan-setup-container.yml
@@ -8,24 +8,24 @@ jobs:
     runs-on: ubuntu-latest
     container: 
       image: hashicorp/terraform
-    defaults:
-      run:
-        shell: bash
-        working-directory: terraform
-    steps:
+    
     - uses: actions/checkout@v3
 
     - run: terraform -help
     - run: ls -R
 
-    # - name: Terraform Init
-    #   env:
-    #     AWS_ACCESS_KEY_ID: ${{secrets.TF_AK}}
-    #     AWS_SECRET_ACCESS_KEY: ${{secrets.TF_SAK}}
-    #   run: terraform init
+    - name: Terraform Init
+      env:
+        AWS_ACCESS_KEY_ID: ${{secrets.TF_AK}}
+        AWS_SECRET_ACCESS_KEY: ${{secrets.TF_SAK}}
+      run: |
+        cd ./terraform
+        terraform init
 
-    # - name: Terraform Plan
-    #   env:
-    #     AWS_ACCESS_KEY_ID: ${{secrets.TF_AK}}
-    #     AWS_SECRET_ACCESS_KEY: ${{secrets.TF_SAK}}
-    #   run: terraform plan
+    - name: Terraform Plan
+      env:
+        AWS_ACCESS_KEY_ID: ${{secrets.TF_AK}}
+        AWS_SECRET_ACCESS_KEY: ${{secrets.TF_SAK}}
+      run: | 
+        cd ./terraform
+        terraform plan
