--- a/.github/workflows/tf-plan-setup-container.yml
+++ b/.github/workflows/tf-plan-setup-container.yml
@@ -14,18 +14,18 @@ jobs:
     - run: terraform -help
     - run: ls -R
 
-    - name: Terraform Init
-      env:
-        AWS_ACCESS_KEY_ID: ${{secrets.TF_AK}}
-        AWS_SECRET_ACCESS_KEY: ${{secrets.TF_SAK}}
-      run: |
-        cd ./terraform
-        terraform init
+    # - name: Terraform Init
+    #   env:
+    #     AWS_ACCESS_KEY_ID: ${{secrets.TF_AK}}
+    #     AWS_SECRET_ACCESS_KEY: ${{secrets.TF_SAK}}
+    #   run: |
+    #     cd ./terraform
+    #     terraform init
 
-    - name: Terraform Plan
-      env:
-        AWS_ACCESS_KEY_ID: ${{secrets.TF_AK}}
-        AWS_SECRET_ACCESS_KEY: ${{secrets.TF_SAK}}
-      run: | 
-        cd ./terraform
-        terraform plan
+    # - name: Terraform Plan
+    #   env:
+    #     AWS_ACCESS_KEY_ID: ${{secrets.TF_AK}}
+    #     AWS_SECRET_ACCESS_KEY: ${{secrets.TF_SAK}}
+    #   run: | 
+    #     cd ./terraform
+    #     terraform plan
