--- a/.github/workflows/whyhello-nginx-container.yml
+++ b/.github/workflows/whyhello-nginx-container.yml
@@ -5,6 +5,7 @@ on:
 
 jobs:
   Docker_Build_Publish:
+    runs-on: ubuntu-latest
     defaults:
       run:
         working-directory: whyhello-nginx
