adding missing steps

--- a/.github/workflows/tf-plan-setup-container.yml
+++ b/.github/workflows/tf-plan-setup-container.yml
@@ -8,7 +8,7 @@ jobs:
     runs-on: ubuntu-latest
     container: 
       image: hashicorp/terraform
-    
+    steps:
     - uses: actions/checkout@v3
 
     - run: terraform -help
