--- a/.github/workflows/tf-destroy.yml
+++ b/.github/workflows/tf-destroy.yml
@@ -1,4 +1,4 @@
-name: EKS Deploy TF Plan
+name: EKS Deploy TF Destroy
 
 on:
   push:
@@ -7,7 +7,7 @@ on:
   workflow_dispatch:
 
 jobs:
-  Terraform_Plan:
+  Terraform_Destroy:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v3
@@ -15,8 +15,8 @@ jobs:
     - name: ls output
       run: ls -R
   
-    - name: I got a secret
-      run: echo ${{ secrets.MY_COOL_SECRET }} | sed 's/./& /g'
+    #- name: I got a secret
+    #  run: echo ${{ secrets.MY_COOL_SECRET }} | sed 's/./& /g'
 
     - name: Install Terraform
       run: |
